@@ -5,6 +5,9 @@
 	us that Carp::Heavy won't load rather than an error telling us we
 	have run out of file handles. (pointed out by bjoern_at_hoehrmann.de RT #14151)
 
+	* Temp.pm: Remove eg. from comments and replace with e.g. In pod
+	replace "e.g." with "for example". (David Landgren)
+
 	* Temp.pm: Correct synopsis concerning the arguments to the
 	File::Temp constructor (Peter Valdemar Moerch).
 
